--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,8 @@
             />
         <service
             android:name=".TestNormalService"
+            android:process=":testservice1"
+            android:stopWithTask="false"
             />
     </application>
 
