--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
 
         <receiver
-            android:name=".TestBroadcastReceiver"
+            android:name=".broadcast.TestBroadcastReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -47,16 +47,17 @@
         </receiver>
 
         <service
-            android:name=".TestLongRunningService"
+            android:name=".services.main.TestLongRunningService"
             android:exported="false"
             android:permission="android.permission.BIND_JOB_SERVICE"
-            android:process=":testservice"
             android:stopWithTask="false"
+            android:process=":testservice"
             />
         <service
-            android:name=".TestNormalService"
-            android:process=":testservice1"
+            android:name=".services.main.TestOldLongRunningService"
             android:stopWithTask="false"
+
+            android:exported="false"
             />
         <service
             android:name=".fcm.SbFirebaseMessagingService"
