--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
         <service
             android:name=".services.main.TestOldLongRunningService"
             android:stopWithTask="false"
-
+            android:process=":testservice"
             android:exported="false"
             />
         <service
