--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,20 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release{
+            storeFile file('keystore.jks')
+            storePassword "pi123456"
+            keyAlias "pi"
+            keyPassword "pi123456"
+        }
+    }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
+            debuggable false
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
